@@ -7,8 +7,10 @@
 * Allow local IPs
 * Bloom plugin: filter more TTH searches
 * [L#427706] Fix some crashes
+* Hub will automatically reject new users if its having bandwidth problems
 * [L#502280] Fix Windows service
 * Accept relative paths in config files
+* [L#518972] Fix python memory leak
 
 -- 2.4 2008-10-02 --
 * Improve Lua scripts
